--- a/settings.json
+++ b/settings.json
@@ -1,198 +1,121 @@
 {
-    "keyboard.dispatch": "keyCode",
-    "editor.fontFamily": "'UbuntuMono Nerd Font', 'monospace', monospace, 'Droid Sans Fallback'",
-    "editor.fontLigatures": false,
-    "editor.lineNumbers": "relative",
-    "editor.renderWhitespace": "all",
-    "editor.tabSize": 2,
-    "workbench.colorTheme": "Nord Wave",
-    "workbench.iconTheme": "vscode-icons",
-    "editor.formatOnSave": true,
-    "editor.minimap.enabled": false,
-    "editor.cursorStyle": "block",
-    "vim.leader": "space",
-    "vim.normalModeKeyBindingsNonRecursive": [
-        {
-            "before": [
-                "Y"
-            ],
-            "after": [
-                "y",
-                "g",
-                "$"
-            ],
-        },
-        {
-            "before": [
-                "<leader>",
-                "p"
-            ],
-            "after": [
-                "\"",
-                "+",
-                "P"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "v",
-                "d"
-            ],
-            "commands": [
-                "editor.action.revealDefinition"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "v",
-                "i"
-            ],
-            "commands": [
-                "editor.action.goToImplementation"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "v",
-                "r",
-                "r"
-            ],
-            "commands": [
-                "editor.action.goToReferences"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "v",
-                "h"
-            ],
-            "commands": [
-                "editor.action.showHover"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "v",
-                "n"
-            ],
-            "commands": [
-                "editor.action.marker.next"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "v",
-                "r",
-                "n"
-            ],
-            "commands": [
-                "editor.action.rename"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "y"
-            ],
-            "after": [
-                "\"",
-                "+",
-                "y"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "Y"
-            ],
-            "after": [
-                "g",
-                "g",
-                "\"",
-                "+",
-                "y",
-                "G"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "d"
-            ],
-            "after": [
-                "\"",
-                "_",
-                "d",
-            ]
-        },
-        {
-            "before": [
-                "J"
-            ],
-            "after": [
-                "m",
-                "z",
-                "J",
-                "`",
-                "z"
-            ]
-        }
-    ],
-    "vim.visualModeKeyBindingsNonRecursive": [
-        {
-            "before": [
-                "<leader>",
-                "p"
-            ],
-            "after": [
-                "\"",
-                "_",
-                "d",
-                "P"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "y"
-            ],
-            "after": [
-                "\"",
-                "+",
-                "y"
-            ]
-        },
-        {
-            "before": [
-                "<leader>",
-                "d"
-            ],
-            "after": [
-                "\"",
-                "_",
-                "d",
-            ]
-        }
-    ],
-    "workbench.colorCustomizations": {
-        "statusBar.background": "#88C0D0",
-        "statusBar.noFolderBackground": "#88C0D0",
-        "statusBar.debuggingBackground": "#88C0D0"
+  "keyboard.dispatch": "keyCode",
+  "editor.fontFamily": "'UbuntuMono Nerd Font', 'monospace', monospace, 'Droid Sans Fallback'",
+  "editor.fontLigatures": false,
+  "editor.lineNumbers": "relative",
+  "editor.renderWhitespace": "all",
+  "editor.tabSize": 2,
+  "workbench.colorTheme": "Nord Wave",
+  "editor.formatOnSave": true,
+  "editor.minimap.enabled": false,
+  "editor.cursorStyle": "block",
+  "vim.leader": "space",
+  "vim.normalModeKeyBindingsNonRecursive": [
+    {
+      "before": ["Y"],
+      "after": ["y", "g", "$"]
     },
-    "vim.cursorStylePerMode.insert": "block",
-    "vim.cursorStylePerMode.normal": "block",
-    "vim.cursorStylePerMode.replace": "block",
-    "vim.cursorStylePerMode.visual": "block",
-    "vim.cursorStylePerMode.visualblock": "block",
-    "vim.cursorStylePerMode.visualline": "block",
-    "workbench.editor.openPositioning": "last",
-    "clangd.arguments": [
-        "--inlay-hints=true"
-    ]
+    {
+      "before": ["<leader>", "p"],
+      "after": ["\"", "+", "P"]
+    },
+    {
+      "before": ["<leader>", "v", "d"],
+      "commands": ["editor.action.revealDefinition"]
+    },
+    {
+      "before": ["<leader>", "v", "i"],
+      "commands": ["editor.action.goToImplementation"]
+    },
+    {
+      "before": ["<leader>", "v", "r", "r"],
+      "commands": ["editor.action.goToReferences"]
+    },
+    {
+      "before": ["<leader>", "v", "h"],
+      "commands": ["editor.action.showHover"]
+    },
+    {
+      "before": ["<leader>", "v", "n"],
+      "commands": ["editor.action.marker.next"]
+    },
+    {
+      "before": ["<leader>", "v", "r", "n"],
+      "commands": ["editor.action.rename"]
+    },
+    {
+      "before": ["<leader>", "y"],
+      "after": ["\"", "+", "y"]
+    },
+    {
+      "before": ["<leader>", "Y"],
+      "after": ["g", "g", "\"", "+", "y", "G"]
+    },
+    {
+      "before": ["<leader>", "d"],
+      "after": ["\"", "_", "d"]
+    },
+    {
+      "before": ["J"],
+      "after": ["m", "z", "J", "`", "z"]
+    }
+  ],
+  "vim.visualModeKeyBindingsNonRecursive": [
+    {
+      "before": ["<leader>", "w"],
+      "commands": ["editor.emmet.action.wrapWithAbbreviation"]
+    },
+    {
+      "before": ["<leader>", "p"],
+      "after": ["\"", "_", "d", "P"]
+    },
+    {
+      "before": ["<leader>", "y"],
+      "after": ["\"", "+", "y"]
+    },
+    {
+      "before": ["<leader>", "d"],
+      "after": ["\"", "_", "d"]
+    }
+  ],
+  "workbench.colorCustomizations": {
+    "statusBar.background": "#88C0D0",
+    "statusBar.noFolderBackground": "#88C0D0",
+    "statusBar.debuggingBackground": "#88C0D0"
+  },
+  "vim.cursorStylePerMode.insert": "block",
+  "vim.cursorStylePerMode.normal": "block",
+  "vim.cursorStylePerMode.replace": "block",
+  "vim.cursorStylePerMode.visual": "block",
+  "vim.cursorStylePerMode.visualblock": "block",
+  "vim.cursorStylePerMode.visualline": "block",
+  "workbench.editor.openPositioning": "last",
+  "clangd.arguments": ["--inlay-hints=true"],
+  "tabnine.experimentalAutoImports": true,
+  "html.format.enable": false,
+  "window.zoomLevel": 2,
+  "prettier.arrowParens": "avoid",
+  "python.formatting.provider": "black",
+  "typescript.inlayHints.parameterTypes.enabled": true,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "[cpp]": {
+    "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "debug.disassemblyView.showSourceCode": false,
+  "editor.inlineSuggest.enabled": true,
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
